--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.2.6",
+    "gsap": "^3.12.5",
+    "lenis": "^1.1.1",
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "split-type": "^0.3.4",
     "styled-components": "^6.1.11",
     "three": "^0.164.1",
     "typewriter-effect": "^2.21.0",
