--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.1",
