--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/gsap": "^3.0.0",
     "emailjs": "^4.0.3",
-    "framer-motion": "^11.2.6",
+    "framer-motion": "^11.2.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.1",
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-fast-marquee": "^1.6.4",
+    "react-fast-marquee": "^1.6.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.1",
