--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/material": "^5.15.18",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@splinetool/loader": "^1.6.8",
+    "@splinetool/react-spline": "^3.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +23,7 @@
     "lenis": "^1.1.1",
     "maath": "^0.10.7",
     "react": "^18.3.1",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^5.2.1",
@@ -32,7 +35,7 @@
     "react-vertical-timeline-component": "^3.6.0",
     "split-type": "^0.3.4",
     "styled-components": "^6.1.11",
-    "three": "^0.164.1",
+    "three": "^0.165.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
