--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "emailjs": "^4.0.3",
     "framer-motion": "^11.2.0",
     "gsap": "^3.12.5",
+    "howler": "^2.2.4",
     "lenis": "^1.1.1",
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.0",
+    "react-howler": "^5.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.1",
