--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "^8.16.6",
+    "@react-three/fiber": "^8.16.8",
     "@splinetool/loader": "^1.6.8",
     "@splinetool/react-spline": "^3.1.0",
+    "@studio-freight/lenis": "^1.0.42",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/gsap": "^3.0.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.2.0",
+    "framer-motion-3d": "^11.2.11",
     "gsap": "^3.12.5",
     "howler": "^2.2.4",
     "lenis": "^1.1.1",
@@ -35,6 +37,7 @@
     "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "sass": "^1.77.6",
     "split-type": "^0.3.4",
     "styled-components": "^6.1.11",
     "three": "^0.165.0",
