--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/gsap": "^3.0.0",
+    "circletype": "^2.3.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.2.0",
     "framer-motion-3d": "^11.2.11",
@@ -27,6 +28,7 @@
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-audio-player": "^0.17.0",
+    "react-curved-text": "^3.0.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.0",
     "react-howler": "^5.2.0",
