--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splinetool/loader": "^1.6.8",
     "@splinetool/react-spline": "^3.1.0",
     "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
