--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.15.18",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.8",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
     "framer-motion-3d": "^11.2.11",
     "gsap": "^3.12.5",
     "howler": "^2.2.4",
+    "lenis": "^1.1.10",
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-audio-player": "^0.17.0",
